<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ProfileApplicationActivity!</string>
    <string name="app_name">ProfileApplication</string>
    <string name="userName">User Name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="name">Name :</string>
    <string name="emailId">Email ID :</string>
    <string name="gender">Gender :</string>
    <string name="hobbies">Hobbies :</string>
    <string name="reading">Reading</string>
    <string name="playing">Playing</string>
    <string name="skeching">Skeching</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="webonise_profile">Webonise Profile</string>

</resources>