<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
        android:background="@drawable/orange_bg"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#0000FF" />

        <EditText
            android:id="@+id/editProfileName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textEmailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailId"
            android:textColor="#0000FF" />

        <EditText
            android:id="@+id/editEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#0000FF" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textColor="#0000FF" />

        <CheckBox
            android:id="@+id/checkReading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading" />

        <CheckBox
            android:id="@+id/checkPlaying"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/playing" />

        <CheckBox
            android:id="@+id/checkSkeching"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/skeching" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />

</LinearLayout>