<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
        android:background="@drawable/orange_bg"
    android:visibility="visible" >

    <TextView
        android:id="@+id/textWeboniseProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/webonise_profile"
        android:textColor="#0000FF" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWeboniseProfile"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:text="@string/emailId" />

 
    <TextView
        android:id="@+id/textGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEmailId"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/textHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textGender"
        android:text="@string/hobbies" />

    <TextView
        android:id="@+id/textHobbiesPrint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textHobbies"
        android:layout_alignRight="@id/textHobbies"
       
         />
    
    <ListView 
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@id/textHobbiesPrint1">
        
    </ListView>


</RelativeLayout>